$Id: History,v 1.3 1999-05-01 21:41:58 lockman Exp $

G3toG4 Modification History (reverse chronological order, please !)
--------------------------------------------------------------------
g3tog4-01-00-02 24-Apr-1999 Lockman
- GNUmakefile: clean now cleans g3tog4 and all subdirectories
- GNUmakefile: cleanf: $(RM) now runs quietly
- README: updated instructions on how to configure environment and make
- G4BuildGeom.cc: replace checkLogVol with checkVol which prints out logical
  volumes and their physical daughters
- G4makevol: use G4LogicalVolume(solid, material, name) constructor
- test/GNUmakefile: define INCFLAGS
- test/README: modified and shortened
- test/src/G3toG4DetectorConstruction.cc: add SimpleConstruct() method 
  for testing; set visibility of daughters, mother.
- test/include/G3toG4DetectorMocnstruction.hh: added private _lv, _pv
- test/src/G3toG4RunAction.cc: set tracking/verbose 1, run/verbose 1

g3tog4-01-00-01 20-Feb-1999 Bill Lockman
- G4makevol.cc: use G4Polycone, G4Polyhedra classes instead of BREP equivalents
- clGeometry.cc: protect vis code; removed templates stuff
- cltog4.cc: removed templates stuff

g3tog4-00-03-04 12-Nov-1998 Bill Lockman
- G3medtable: dynamically instantiate a G4FieldManager(field*) object and
  pass it to G4LogicalVolume by pointer.
- adapt G3toG3PhysicsList.* from N02

g3tog4-00-03-03 02-Nov-1998 Bill Lockman
- src: Added G3toG4RotationMatrix class, remove G3toG3SetRotation class;
- test: add parity.dat to test parity inversions

g3tog4-00-03-02 05-Oct-1998 Bill Lockman
- GNUmakefile, test/GNUmakefile mods by John Allison

g3tog4-00-03-01 21-Sep-1998 BIll Lockman
- svtwaf.dat: shrank size of svt mother volume just enclose the detectors.

g3tog4-00-02-02 17-Sep-1998 Bill Lockman
- implemented G4 capitalization convention for class names. g3tog4->G3toG4.
- clGeometry.cc: introduced G3toG4VisManager class; 
  added RunManager->Initialize
- added G3toG4SetRotation class to set rotation matrix elements directly,